modified:   train.ipynb

--- a/train.ipynb
+++ b/train.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
     "        self.init_lr = 0.001\n",
     "        self.max_lr = 0.0001\n",
     "        self.final_lr = 0.001\n",
-    "        self.epochs = 5\n",
+    "        self.epochs = 50\n",
     "        self.accelerator='cpu'\n",
     "        self.devices = 'auto'\n",
     "        self.target_columns = [target_columns]\n",
@@ -178,7 +178,7 @@
     "\n",
     "args = Args(data_path='./Datasets/viscosity_data.csv',\n",
     "            output_dir='./Chemprop_Models/', ensemble_size=1, \n",
-    "            message_hidden_dim=300, depth=3, dropout=0.0, \n",
+    "            message_hidden_dim=300, depth=3, dropout=0.3, \n",
     "            activation='RELU', aggregation='mean', aggregation_norm=100, \n",
     "            ffn_hidden_dim=300, ffn_num_layers=1, loss_reg=0.0, \n",
     "            model_frzn=None, warmup_epochs=2, target_columns='Viscosity')"
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -208,19 +208,18 @@
       "0 | message_passing | BondMessagePassing | 227 K \n",
       "1 | agg             | MeanAggregation    | 0     \n",
       "2 | bn              | BatchNorm1d        | 600   \n",
-      "3 | predictor       | RegressionFFN      | 135 K \n",
+      "3 | predictor       | RegressionFFN      | 90.9 K\n",
       "-------------------------------------------------------\n",
-      "364 K     Trainable params\n",
+      "319 K     Trainable params\n",
       "0         Non-trainable params\n",
-      "364 K     Total params\n",
-      "1.456     Total estimated model params size (MB)\n"
+      "319 K     Total params\n",
+      "1.277     Total estimated model params size (MB)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[300, 300, 150, 2]\n",
       "                                                                           "
      ]
     },
@@ -235,21 +234,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 4: 100%|██████████| 35/35 [00:02<00:00, 15.00it/s, v_num=1, train_loss=1.500, val_loss=1.160]"
+      "Epoch 49: 100%|██████████| 35/35 [00:02<00:00, 15.04it/s, v_num=4, train_loss=0.102, val_loss=0.775] "
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "`Trainer.fit` stopped: `max_epochs=5` reached.\n"
+      "`Trainer.fit` stopped: `max_epochs=50` reached.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 4: 100%|██████████| 35/35 [00:02<00:00, 14.95it/s, v_num=1, train_loss=1.500, val_loss=1.160]"
+      "Epoch 49: 100%|██████████| 35/35 [00:02<00:00, 15.00it/s, v_num=4, train_loss=0.102, val_loss=0.775]"
      ]
     },
     {
@@ -257,8 +256,8 @@
      "output_type": "stream",
      "text": [
       "/Users/bhanumamillapalli/miniconda3/envs/chemprop_git/lib/python3.11/site-packages/lightning/pytorch/trainer/connectors/checkpoint_connector.py:145: `.predict(ckpt_path=None)` was called without a model. The best model of the previous `fit` call will be used. You can pass `.predict(ckpt_path='best')` to use the best model or `.predict(ckpt_path='last')` to use the last model. If you pass a value, this warning will be silenced.\n",
-      "Restoring states from the checkpoint path at /Users/bhanumamillapalli/Documents/GitHub/GNN_TF_Pred/Chemprop_Models/model_0/checkpoints/best-epoch=1-val_loss=0.71-v1.ckpt\n",
-      "Loaded model weights from the checkpoint at /Users/bhanumamillapalli/Documents/GitHub/GNN_TF_Pred/Chemprop_Models/model_0/checkpoints/best-epoch=1-val_loss=0.71-v1.ckpt\n",
+      "Restoring states from the checkpoint path at /Users/bhanumamillapalli/Documents/GitHub/GNN_TF_Pred/Chemprop_Models/model_0/checkpoints/best-epoch=45-val_loss=0.59.ckpt\n",
+      "Loaded model weights from the checkpoint at /Users/bhanumamillapalli/Documents/GitHub/GNN_TF_Pred/Chemprop_Models/model_0/checkpoints/best-epoch=45-val_loss=0.59.ckpt\n",
       "/Users/bhanumamillapalli/miniconda3/envs/chemprop_git/lib/python3.11/site-packages/lightning/pytorch/trainer/connectors/data_connector.py:441: The 'predict_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=7` in the `DataLoader` to improve performance.\n"
      ]
     },
@@ -267,10 +266,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Predicting DataLoader 0: 100%|██████████| 5/5 [00:00<00:00, 37.01it/s]\n",
+      "Predicting DataLoader 0: 100%|██████████| 5/5 [00:00<00:00, 39.70it/s]\n",
       "No Ea / R targets provided\n",
-      "Entire Test Set results: {'entire_test/mse': 0.7071724103278294}\n",
-      "[300, 300, 150, 2]\n"
+      "Entire Test Set results: {'entire_test/mse': 1.4545575058341145}\n"
      ]
     }
    ],
